@@ -4,28 +4,35 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
+MOD_BANNERS_XML_DESCRIPTION="The Banner Module allows to show the active Banners out of the Component within your site."
+
+; Banner image alt
 MOD_BANNERS_BANNER="Banner"
-MOD_BANNERS_BANNERCLIENT_DESC="Select Banners only from a single Client."
-MOD_BANNERS_BANNERCLIENT_LABEL="Client"
-MOD_BANNERS_CACHETIME_DESC="The time before the module is recached"
-MOD_BANNERS_CACHETIME_LABEL="Cache time"
-MOD_BANNERS_CATEGORY_DESC="Select Banners only from a single Category."
-MOD_BANNERS_CATEGORY_LABEL="Category"
-MOD_BANNERS_COUNT_DESC="The number of Banners to display (default 5)"
-MOD_BANNERS_COUNT_LABEL="Count"
-MOD_BANNERS_DESC="The Banner Module allows to show the active Banners out of the Component within your site."
-MOD_BANNERS_FOOTER_DESC="Text to display after the group of Banners"
-MOD_BANNERS_FOOTER_LABEL="Footer text"
-MOD_BANNERS_HEADER_DESC="A heading to display before the group of Banners"
-MOD_BANNERS_HEADER_LABEL="Header text"
-MOD_BANNERS_NEWWINDOWWITHBROWSERNAVIGATION="New Window With Browser Navigation"
-MOD_BANNERS_NEWWINDOWWITHOUTBROWSERNAVIGATION="New Window Without Browser Navigation"
-MOD_BANNERS_PARENT="Parent Window With Browser Navigation"
-MOD_BANNERS_RANDOMISE_DESC="Randomise the ordering of the Banners"
-MOD_BANNERS_RANDOMISE_LABEL="Randomise"
-MOD_BANNERS_STICKYORDERING="Sticky, Ordering"
-MOD_BANNERS_STICKYRANDOMISE="Sticky, Randomise"
-MOD_BANNERS_TAG_DESC="Banner is selected by matching the Banner Tags to the current document keywords."
-MOD_BANNERS_TAG_LABEL="Search by tag"
-MOD_BANNERS_TARGET_DESC="Target window when the link is clicked"
-MOD_BANNERS_TARGET_LABEL="Target"
+
+; params
+MOD_BANNERS_FIELD_BANNERCLIENT_DESC="Select Banners only from a single Client."
+MOD_BANNERS_FIELD_BANNERCLIENT_LABEL="Client"
+MOD_BANNERS_FIELD_CACHETIME_DESC="The time before the module is recached"
+MOD_BANNERS_FIELD_CACHETIME_LABEL="Cache time"
+MOD_BANNERS_FIELD_CATEGORY_DESC="Select Banners only from a single Category."
+MOD_BANNERS_FIELD_CATEGORY_LABEL="Category"
+MOD_BANNERS_FIELD_COUNT_DESC="The number of Banners to display (default 5)"
+MOD_BANNERS_FIELD_COUNT_LABEL="Count"
+MOD_BANNERS_FIELD_FOOTER_DESC="Text to display after the group of Banners"
+MOD_BANNERS_FIELD_FOOTER_LABEL="Footer text"
+MOD_BANNERS_FIELD_HEADER_DESC="A heading to display before the group of Banners"
+MOD_BANNERS_FIELD_HEADER_LABEL="Header text"
+MOD_BANNERS_FIELD_RANDOMISE_DESC="Randomise the ordering of the Banners"
+MOD_BANNERS_FIELD_RANDOMISE_LABEL="Randomise"
+MOD_BANNERS_FIELD_TAG_DESC="Banner is selected by matching the Banner Tags to the current document keywords."
+MOD_BANNERS_FIELD_TAG_LABEL="Search by tag"
+MOD_BANNERS_FIELD_TARGET_DESC="Target window when the link is clicked"
+MOD_BANNERS_FIELD_TARGET_LABEL="Target"
+MOD_BANNERS_VALUE_NEWWINDOWWITHBROWSERNAVIGATION="New Window With Browser Navigation"
+MOD_BANNERS_VALUE_NEWWINDOWWITHOUTBROWSERNAVIGATION="New Window Without Browser Navigation"
+MOD_BANNERS_VALUE_PARENT="Parent Window With Browser Navigation"
+MOD_BANNERS_VALUE_STICKYORDERING="Sticky, Ordering"
+MOD_BANNERS_VALUE_STICKYRANDOMISE="Sticky, Randomise"
+
+; for addfieldpath="/administrator/components/com_banners/models/fields">
+BANNERS_NO_CLIENT="No Client"
